// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/containers/ServiceAssurance/Gameqoo/Validation/lib/ValidationSection render 1`] = `
<form>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={5}
  >
    <React.Fragment>
      <WithStyles(ForwardRef(Grid))
        item={true}
        md={12}
        sm={12}
      >
        <HeaderAndFilter
          action={null}
          breadcrumb={Array []}
          filter={Array []}
          loading={false}
          otherStatus={null}
          search={null}
          status={null}
          tabs={
            Object {
              "onChange": [Function],
              "options": Array [],
              "value": "",
            }
          }
          tabsL2={
            Object {
              "onChange": [Function],
              "options": Array [],
              "value": "",
            }
          }
          withTopDivider={true}
        />
      </WithStyles(ForwardRef(Grid))>
    </React.Fragment>
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={6}
      sm={12}
    >
      <Typography
        className=""
        color="general-mid"
        inline={false}
        variant="h4"
        weight="medium"
      >
        Service Information
      </Typography>
      <Styled(MuiBox)
        mb={5}
      >
        <Styled(MuiBox)
          mt={3}
        >
          <WithStyles(ForwardRef(Grid))>
            <TextField
              control={Object {}}
              disabled={true}
              error={false}
              helperText=""
              label="Service ID"
              maxLength={40}
              name="serviceId"
              required={true}
              shouldUnregister={false}
            />
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))>
            <Button
              disabled={true}
              leftIcon={null}
              loading={false}
              ml={0}
              mr={0}
              onClick={[MockFunction]}
              rightIcon={null}
              rounded="normal"
              textTransform="uppercase"
              variant="filled"
            >
              DUMMY SID
            </Button>
          </WithStyles(ForwardRef(Grid))>
        </Styled(MuiBox)>
        <Styled(MuiBox)
          mt={3}
        >
          <TextField
            control={Object {}}
            disabled={true}
            error={false}
            helperText=""
            label="Address"
            maxLength={160}
            minRows={5}
            multiline={true}
            name="address"
            required={true}
            shouldUnregister={false}
          />
        </Styled(MuiBox)>
        <Styled(MuiBox)
          mt={3}
        >
          <Select
            control={Object {}}
            error={false}
            helperText=""
            label="First Call Resolution"
            maxWidth={260}
            name="firstCallResolution"
            options={
              Array [
                Object {
                  "label": "No",
                  "value": "no",
                },
              ]
            }
            placeholder="Choose First Call Resolution"
            required={true}
            shouldUnregister={false}
          />
        </Styled(MuiBox)>
        <Styled(MuiBox)
          mt={3}
        >
          <Select
            control={Object {}}
            error={false}
            helperText=""
            label="Product"
            name="productId"
            placeholder="Choose Product"
            required={true}
            shouldUnregister={false}
          />
        </Styled(MuiBox)>
      </Styled(MuiBox)>
      <Typography
        className=""
        color="general-mid"
        inline={false}
        variant="h4"
        weight="medium"
      >
        PIC Customer
      </Typography>
      <Styled(MuiBox)
        mb={5}
      >
        <Styled(MuiBox)
          mt={3}
        >
          <TextField
            control={Object {}}
            disabled={true}
            error={false}
            helperText=""
            label="PIC Name"
            maxLength={40}
            name="picName"
            required={true}
            shouldUnregister={false}
          />
        </Styled(MuiBox)>
        <Styled(MuiBox)
          mt={3}
        >
          <PhoneInput
            control={Object {}}
            disabled={true}
            error={false}
            helperText=""
            label="PIC Contact"
            maxLength={16}
            name="picPhoneNumber"
            required={true}
          />
        </Styled(MuiBox)>
      </Styled(MuiBox)>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={6}
      sm={12}
    >
      <Typography
        className=""
        color="general-mid"
        inline={false}
        variant="h4"
        weight="medium"
      >
        Fault Information
      </Typography>
      <Styled(MuiBox)
        mb={5}
      >
        <Styled(MuiBox)
          mt={3}
        >
          <Select
            control={Object {}}
            error={false}
            helperText=""
            label="Urgency"
            maxWidth={175}
            name="urgency"
            placeholder="Choose Urgency"
            required={true}
            shouldUnregister={false}
          />
        </Styled(MuiBox)>
        <Styled(MuiBox)
          mt={3}
        >
          <Select
            control={Object {}}
            error={false}
            helperText=""
            label="Hard Complaint"
            maxWidth={230}
            name="hardComplaint"
            placeholder="Choose Hard Complaint"
            required={true}
            shouldUnregister={false}
          />
        </Styled(MuiBox)>
        <Styled(MuiBox)
          mt={3}
        >
          <SelectWithLevel
            data={Array []}
            isLoading={false}
            label="Symptoms"
            name="symptoms"
            onChange={[Function]}
            placeholder="Choose Symptom"
            required={true}
            value={null}
          />
        </Styled(MuiBox)>
        <Styled(MuiBox)
          mt={3}
        >
          <TextField
            control={Object {}}
            disabled={false}
            error={false}
            helperText=""
            label="Description"
            minRows={5}
            multiline={true}
            name="description"
            required={true}
            shouldUnregister={false}
          />
        </Styled(MuiBox)>
        <Styled(MuiBox)
          mt={3}
        >
          <TextField
            control={Object {}}
            disabled={false}
            error={false}
            helperText=""
            label="OCC's Note"
            maxLength={160}
            minRows={5}
            multiline={true}
            name="occNote"
            required={true}
            shouldUnregister={false}
          />
        </Styled(MuiBox)>
      </Styled(MuiBox)>
      <Typography
        className=""
        color="general-mid"
        inline={false}
        variant="h4"
        weight="medium"
      >
        PIC Internal
      </Typography>
      <Styled(MuiBox)
        mb={5}
      >
        <Styled(MuiBox)
          mt={3}
        >
          <TextField
            control={Object {}}
            disabled={false}
            error={false}
            helperText=""
            label="PIC Name"
            maxLength={40}
            name="contactName"
            shouldUnregister={false}
          />
        </Styled(MuiBox)>
        <Styled(MuiBox)
          mt={3}
        >
          <PhoneInput
            control={Object {}}
            error={false}
            helperText=""
            label="PIC Contact"
            maxLength={16}
            name="contactPhone"
          />
        </Styled(MuiBox)>
      </Styled(MuiBox)>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(FormControlLabel))
        control={
          <ForwardRef
            checked={false}
            onChange={[MockFunction]}
          />
        }
        label="  Agree, Data cannot be changed after submitting"
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))>
      <Button
        disabled={true}
        leftIcon={null}
        loading={false}
        ml={0}
        mr={0}
        onClick={[Function]}
        rightIcon={null}
        rounded="normal"
        textTransform="uppercase"
        type="submit"
        variant="filled"
      >
        Validate
      </Button>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</form>
`;

exports[`src/containers/ServiceAssurance/Gameqoo/Validation/lib/ValidationSection render another state 1`] = `
<form>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={5}
  >
    <React.Fragment>
      <WithStyles(ForwardRef(Grid))
        item={true}
        md={12}
        sm={12}
      >
        <HeaderAndFilter
          action={null}
          breadcrumb={Array []}
          filter={Array []}
          loading={false}
          otherStatus={null}
          search={null}
          status={null}
          tabs={
            Object {
              "onChange": [Function],
              "options": Array [],
              "value": "",
            }
          }
          tabsL2={
            Object {
              "onChange": [Function],
              "options": Array [],
              "value": "",
            }
          }
          withTopDivider={true}
        />
      </WithStyles(ForwardRef(Grid))>
    </React.Fragment>
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={6}
      sm={12}
    >
      <Typography
        className=""
        color="general-mid"
        inline={false}
        variant="h4"
        weight="medium"
      >
        Service Information
      </Typography>
      <Styled(MuiBox)
        mb={5}
      >
        <Styled(MuiBox)
          mt={3}
        >
          <WithStyles(ForwardRef(Grid))>
            <AutoComplete
              control={Object {}}
              error={false}
              helperText=""
              label="Service ID"
              maxLength={160}
              name="serviceId"
              options={
                Array [
                  "test",
                  "test2",
                ]
              }
              required={true}
            />
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))>
            <Button
              disabled={true}
              leftIcon={null}
              loading={false}
              ml={0}
              mr={0}
              onClick={[MockFunction]}
              rightIcon={null}
              rounded="normal"
              textTransform="uppercase"
              variant="filled"
            >
              DUMMY SID
            </Button>
          </WithStyles(ForwardRef(Grid))>
        </Styled(MuiBox)>
        <Styled(MuiBox)
          mt={3}
        >
          <TextField
            control={Object {}}
            disabled={false}
            error={false}
            helperText=""
            label="Address"
            maxLength={160}
            minRows={5}
            multiline={true}
            name="address"
            required={true}
            shouldUnregister={false}
          />
        </Styled(MuiBox)>
        <Styled(MuiBox)
          mt={3}
        >
          <Select
            control={Object {}}
            error={false}
            helperText=""
            label="First Call Resolution"
            maxWidth={260}
            name="firstCallResolution"
            options={
              Array [
                Object {
                  "label": "No",
                  "value": "no",
                },
              ]
            }
            placeholder="Choose First Call Resolution"
            required={true}
            shouldUnregister={false}
          />
        </Styled(MuiBox)>
        <Styled(MuiBox)
          mt={3}
        >
          <Select
            control={Object {}}
            error={false}
            helperText=""
            label="Product"
            name="productId"
            placeholder="Choose Product"
            required={true}
            shouldUnregister={false}
          />
        </Styled(MuiBox)>
      </Styled(MuiBox)>
      <Typography
        className=""
        color="general-mid"
        inline={false}
        variant="h4"
        weight="medium"
      >
        PIC Customer
      </Typography>
      <Styled(MuiBox)
        mb={5}
      >
        <Styled(MuiBox)
          mt={3}
        >
          <TextField
            control={Object {}}
            disabled={false}
            error={false}
            helperText=""
            label="PIC Name"
            maxLength={40}
            name="picName"
            required={true}
            shouldUnregister={false}
          />
        </Styled(MuiBox)>
        <Styled(MuiBox)
          mt={3}
        >
          <PhoneInput
            control={Object {}}
            disabled={false}
            error={false}
            helperText=""
            label="PIC Contact"
            maxLength={16}
            name="picPhoneNumber"
            required={true}
          />
        </Styled(MuiBox)>
      </Styled(MuiBox)>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={6}
      sm={12}
    >
      <Typography
        className=""
        color="general-mid"
        inline={false}
        variant="h4"
        weight="medium"
      >
        Fault Information
      </Typography>
      <Styled(MuiBox)
        mb={5}
      >
        <Styled(MuiBox)
          mt={3}
        >
          <Select
            control={Object {}}
            error={false}
            helperText=""
            label="Urgency"
            maxWidth={175}
            name="urgency"
            placeholder="Choose Urgency"
            required={true}
            shouldUnregister={false}
          />
        </Styled(MuiBox)>
        <Styled(MuiBox)
          mt={3}
        >
          <Select
            control={Object {}}
            error={false}
            helperText=""
            label="Hard Complaint"
            maxWidth={230}
            name="hardComplaint"
            placeholder="Choose Hard Complaint"
            required={true}
            shouldUnregister={false}
          />
        </Styled(MuiBox)>
        <Styled(MuiBox)
          mt={3}
        >
          <SelectWithLevel
            data={Array []}
            isLoading={false}
            label="Symptoms"
            name="symptoms"
            onChange={[Function]}
            placeholder="Choose Symptom"
            required={true}
            value={null}
          />
        </Styled(MuiBox)>
        <Styled(MuiBox)
          mt={3}
        >
          <TextField
            control={Object {}}
            disabled={true}
            error={false}
            helperText=""
            label="Description"
            minRows={5}
            multiline={true}
            name="description"
            required={true}
            shouldUnregister={false}
          />
        </Styled(MuiBox)>
        <Styled(MuiBox)
          mt={3}
        >
          <TextField
            control={Object {}}
            disabled={false}
            error={false}
            helperText=""
            label="OCC's Note"
            maxLength={160}
            minRows={5}
            multiline={true}
            name="occNote"
            required={true}
            shouldUnregister={false}
          />
        </Styled(MuiBox)>
      </Styled(MuiBox)>
      <Typography
        className=""
        color="general-mid"
        inline={false}
        variant="h4"
        weight="medium"
      >
        PIC Internal
      </Typography>
      <Styled(MuiBox)
        mb={5}
      >
        <Styled(MuiBox)
          mt={3}
        >
          <TextField
            control={Object {}}
            disabled={false}
            error={false}
            helperText=""
            label="PIC Name"
            maxLength={40}
            name="contactName"
            shouldUnregister={false}
          />
        </Styled(MuiBox)>
        <Styled(MuiBox)
          mt={3}
        >
          <PhoneInput
            control={Object {}}
            error={false}
            helperText=""
            label="PIC Contact"
            maxLength={16}
            name="contactPhone"
          />
        </Styled(MuiBox)>
      </Styled(MuiBox)>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(FormControlLabel))
        control={
          <ForwardRef
            checked={false}
            onChange={[MockFunction]}
          />
        }
        label="  Agree, Data cannot be changed after submitting"
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))>
      <Button
        disabled={true}
        leftIcon={null}
        loading={false}
        ml={0}
        mr={0}
        onClick={[Function]}
        rightIcon={null}
        rounded="normal"
        textTransform="uppercase"
        type="submit"
        variant="filled"
      >
        Validate
      </Button>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</form>
`;

exports[`src/containers/ServiceAssurance/Gameqoo/Validation/lib/ValidationSection render another state formState checking 1`] = `
<form>
  <WithStyles(ForwardRef(Grid))
    container={true}
    spacing={5}
  >
    <React.Fragment>
      <WithStyles(ForwardRef(Grid))
        item={true}
        md={12}
        sm={12}
      >
        <HeaderAndFilter
          action={null}
          breadcrumb={Array []}
          filter={Array []}
          loading={false}
          otherStatus={null}
          search={null}
          status={null}
          tabs={
            Object {
              "onChange": [Function],
              "options": Array [],
              "value": "",
            }
          }
          tabsL2={
            Object {
              "onChange": [Function],
              "options": Array [],
              "value": "",
            }
          }
          withTopDivider={true}
        />
      </WithStyles(ForwardRef(Grid))>
    </React.Fragment>
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={6}
      sm={12}
    >
      <Typography
        className=""
        color="general-mid"
        inline={false}
        variant="h4"
        weight="medium"
      >
        Service Information
      </Typography>
      <Styled(MuiBox)
        mb={5}
      >
        <Styled(MuiBox)
          mt={3}
        >
          <WithStyles(ForwardRef(Grid))>
            <TextField
              control={Object {}}
              disabled={false}
              error={false}
              helperText=""
              label="Service ID"
              maxLength={40}
              name="serviceId"
              required={true}
              shouldUnregister={false}
            />
          </WithStyles(ForwardRef(Grid))>
          <WithStyles(ForwardRef(Grid))>
            <Button
              disabled={false}
              leftIcon={null}
              loading={false}
              ml={0}
              mr={0}
              onClick={[MockFunction]}
              rightIcon={null}
              rounded="normal"
              textTransform="uppercase"
              variant="filled"
            >
              DUMMY SID
            </Button>
          </WithStyles(ForwardRef(Grid))>
        </Styled(MuiBox)>
        <Styled(MuiBox)
          mt={3}
        >
          <TextField
            control={Object {}}
            disabled={true}
            error={false}
            helperText=""
            label="Address"
            maxLength={160}
            minRows={5}
            multiline={true}
            name="address"
            required={true}
            shouldUnregister={false}
          />
        </Styled(MuiBox)>
        <Styled(MuiBox)
          mt={3}
        >
          <Select
            control={Object {}}
            error={false}
            helperText=""
            label="First Call Resolution"
            maxWidth={260}
            name="firstCallResolution"
            options={
              Array [
                Object {
                  "label": "No",
                  "value": "no",
                },
              ]
            }
            placeholder="Choose First Call Resolution"
            required={true}
            shouldUnregister={false}
          />
        </Styled(MuiBox)>
        <Styled(MuiBox)
          mt={3}
        >
          <Select
            control={Object {}}
            error={false}
            helperText=""
            label="Product"
            name="productId"
            placeholder="Choose Product"
            required={true}
            shouldUnregister={false}
          />
        </Styled(MuiBox)>
      </Styled(MuiBox)>
      <Typography
        className=""
        color="general-mid"
        inline={false}
        variant="h4"
        weight="medium"
      >
        PIC Customer
      </Typography>
      <Styled(MuiBox)
        mb={5}
      >
        <Styled(MuiBox)
          mt={3}
        >
          <TextField
            control={Object {}}
            disabled={false}
            error={false}
            helperText=""
            label="PIC Name"
            maxLength={40}
            name="picName"
            required={true}
            shouldUnregister={false}
          />
        </Styled(MuiBox)>
        <Styled(MuiBox)
          mt={3}
        >
          <PhoneInput
            control={Object {}}
            disabled={false}
            error={false}
            helperText=""
            label="PIC Contact"
            maxLength={16}
            name="picPhoneNumber"
            required={true}
          />
        </Styled(MuiBox)>
      </Styled(MuiBox)>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={6}
      sm={12}
    >
      <Typography
        className=""
        color="general-mid"
        inline={false}
        variant="h4"
        weight="medium"
      >
        Fault Information
      </Typography>
      <Styled(MuiBox)
        mb={5}
      >
        <Styled(MuiBox)
          mt={3}
        >
          <Select
            control={Object {}}
            error={false}
            helperText=""
            label="Urgency"
            maxWidth={175}
            name="urgency"
            placeholder="Choose Urgency"
            required={true}
            shouldUnregister={false}
          />
        </Styled(MuiBox)>
        <Styled(MuiBox)
          mt={3}
        >
          <Select
            control={Object {}}
            error={false}
            helperText=""
            label="Hard Complaint"
            maxWidth={230}
            name="hardComplaint"
            placeholder="Choose Hard Complaint"
            required={true}
            shouldUnregister={false}
          />
        </Styled(MuiBox)>
        <Styled(MuiBox)
          mt={3}
        >
          <SelectWithLevel
            data={Array []}
            isLoading={false}
            label="Symptoms"
            name="symptoms"
            onChange={[Function]}
            placeholder="Choose Symptom"
            required={true}
            value={null}
          />
        </Styled(MuiBox)>
        <Styled(MuiBox)
          mt={3}
        >
          <TextField
            control={Object {}}
            disabled={true}
            error={false}
            helperText=""
            label="Description"
            minRows={5}
            multiline={true}
            name="description"
            required={true}
            shouldUnregister={false}
          />
        </Styled(MuiBox)>
        <Styled(MuiBox)
          mt={3}
        >
          <TextField
            control={Object {}}
            disabled={false}
            error={false}
            helperText=""
            label="OCC's Note"
            maxLength={160}
            minRows={5}
            multiline={true}
            name="occNote"
            required={true}
            shouldUnregister={false}
          />
        </Styled(MuiBox)>
      </Styled(MuiBox)>
      <Typography
        className=""
        color="general-mid"
        inline={false}
        variant="h4"
        weight="medium"
      >
        PIC Internal
      </Typography>
      <Styled(MuiBox)
        mb={5}
      >
        <Styled(MuiBox)
          mt={3}
        >
          <TextField
            control={Object {}}
            disabled={false}
            error={false}
            helperText=""
            label="PIC Name"
            maxLength={40}
            name="contactName"
            shouldUnregister={false}
          />
        </Styled(MuiBox)>
        <Styled(MuiBox)
          mt={3}
        >
          <PhoneInput
            control={Object {}}
            error={false}
            helperText=""
            label="PIC Contact"
            maxLength={16}
            name="contactPhone"
          />
        </Styled(MuiBox)>
      </Styled(MuiBox)>
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))>
      <WithStyles(ForwardRef(FormControlLabel))
        control={
          <ForwardRef
            checked={false}
            onChange={[MockFunction]}
          />
        }
        label="  Agree, Data cannot be changed after submitting"
      />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))>
      <Button
        disabled={true}
        leftIcon={null}
        loading={false}
        ml={0}
        mr={0}
        onClick={[Function]}
        rightIcon={null}
        rounded="normal"
        textTransform="uppercase"
        type="submit"
        variant="filled"
      >
        Validate
      </Button>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</form>
`;
